reworked for docker and elasticsearch removed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.data.mongodb.uri=mongodb://YOUR_PATH/farforlow
-spring.data.elasticsearch.repositories.enabled=true
-logging.file.name=YOUR_PATH
+spring.data.mongodb.host=mongodb
+spring.data.mongodb.port=27017
+
+logging.file.path=/
+logging.file.name=application-debug.log
