--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.data.mongodb.port=27017
 
 logging.file.path=/
 logging.file.name=application-debug.log
+
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore/farforlow.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=
+server.ssl.key-alias=farforlow
+server.port=8443
